# pam-context

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  SYSTEM_DESIGN.md  alembic.ini  docker-compose.yml  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: cd.yml  ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_ingestion_tasks.py  003_add_users_and_roles.py  004_add_extracted_entities.py  005_add_content_hash_index_and_role_constraint.py  006_add_graph_synced.py  007_add_modified_at.py  008_add_memories.py  009_add_conversations.py  010_add_glossary_terms.py
docs/: implementation-plan.md  system-design.md  tech-stack.md
eval/: conftest.py  judges.py  load_test.py  metrics.py  questions.json  run_eval.py  synthetic_gen.py  test_rag_quality.py
scripts/: seed_test_docs.py
tests/: conftest.py
tests/conversation/: conftest.py  test_extraction.py  test_routes.py  test_service.py  test_summarizer.py
tests/eval/: test_judges.py  test_metrics.py  test_run_eval.py  test_synthetic_gen.py
tests/glossary/: conftest.py  test_resolver.py  test_service.py  test_store.py
tests/integration/: test_github_integration.py
tests/mcp/: conftest.py  test_conversation_tools.py  test_document_tools.py  test_graph_tools.py  test_memory_tools.py  test_resources.py  test_search_tools.py  test_util_tools.py
tests/memory/: conftest.py  test_service.py  test_store.py
tests/test_agent/: test_agent.py  test_agent_tools.py  test_change_history.py  test_context_assembly.py  test_context_assembly_comprehensive.py  test_conversation_truncation.py  test_document_limit.py  test_duckdb_service.py  test_graph_context.py  test_graph_tool.py  test_keyword_extractor.py  test_mode_routing.py  test_query_classifier.py  test_query_classifier_gaps.py  test_smart_search.py  test_smart_search_4way.py  test_smart_search_context.py  test_smart_search_gaps.py  test_smart_search_vdb.py  test_tools.py
tests/test_api/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_chat_models.py  test_chat_smart_search.py  test_deps.py  test_documents.py  test_graph_routes.py  test_graph_status.py  test_health.py  test_ingest.py  test_middleware.py  test_pagination.py  test_rate_limit.py  test_search.py
tests/test_common/: test_cache.py  test_config.py  test_config_validation.py  test_database.py  test_graph.py  test_haystack_adapter.py  test_llm_base.py  test_logging.py  test_models.py  test_utils.py
tests/test_graph/: test_diff_engine.py  test_entity_types.py  test_mapper.py  test_pipeline.py  test_query_service.py  test_relationship_extractor.py  test_schema.py  test_service.py  test_versioning.py  test_writer.py
tests/test_ingestion/: conftest.py  test_base_parser.py  test_cli_base.py  test_connector_factory.py  test_docling_parser.py  test_elasticsearch_store.py  test_entity_extractor.py  test_entity_relationship_store.py  test_github_connector.py  test_google_docs_connector.py  test_google_sheets_modified_at.py  test_gws_docs_connector.py  test_gws_sheets_connector.py  test_hybrid_chunker.py  test_ingest_api_github.py  test_markdown_connector.py  test_mineru_parser.py  test_multimodal.py  test_ollama_embedder.py  test_openai_embedder.py  test_pipeline.py  test_postgres_store.py  test_sheets_connector.py  test_task_manager.py  test_task_manager_cli.py  test_task_manager_refactor.py
tests/test_retrieval/: test_haystack_search.py  test_hybrid_search.py  test_reranker.py  (+2 more)
web/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
(+272 files in other folders)
