[project]
name = "pam-context"
version = "0.1.0"
description = "Business Knowledge Layer for LLMs"
requires-python = ">=3.12"
dependencies = [
    # Parsing
    "docling>=2.0",
    # Storage
    "elasticsearch[async]>=8.0",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.0",
    "alembic>=1.13",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # LLM
    "anthropic>=0.40",
    "openai>=1.50",
    # Google
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    # Cache
    "redis[hiredis]>=5.0",
    # Analytics
    "duckdb>=1.0",
    # Auth
    "pyjwt>=2.8",
    # Haystack (retrieval pipeline)
    "haystack-ai>=2.9",
    "elasticsearch-haystack>=2.0",
    # Reranking
    "sentence-transformers>=3.0",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pam"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "ARG", "PT", "RET", "PERF", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S108", "ARG001", "ARG002", "ARG005", "PT019"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (ES, PG)",
]

[tool.coverage.run]
source = ["src/pam"]

[tool.coverage.report]
fail_under = 80
omit = [
    "*/__init__.py",
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "def __repr__",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
